Lower Jenkins version (do not merge, only to create .hpi)